Fix many many warnings, some lint on whole project